Modify game-area max width to prevent writing going outside the box on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
     background-color: #f5d4ac;
     box-sizing: border-box;
     width: 85%;
-    max-height: 40rem;
+    max-height: 50rem;
     max-width: 65rem;
     margin-left: auto;
     margin-right: auto;
